--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch src/sass:public/css --style compressed --no-source-map && echo \u001b[32m Files SASS compiled \u001b[0m"
+    "sass": "sass --watch source/sass:source/css --style compressed --no-source-map && echo \u001b[32m Files SASS compiled \u001b[0m"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/Olivieroy/web-starter#readme",
   "devDependencies": {
-    "sass": "^1.54.0"
+    "sass": "^1.55.0"
   }
 }
