--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Olivieroy/web-starter.git"
+    "url": ""
   },
   "author": "Olivier Roy",
   "license": "MIT",
