--- a/package.json
+++ b/package.json
@@ -19,5 +19,24 @@
   "homepage": "https://github.com/Olivieroy/web-starter#readme",
   "devDependencies": {
     "sass": "^1.55.0"
+  },
+  "dependencies": {
+    "binary-extensions": "^2.2.0",
+    "chokidar": "^3.5.3",
+    "anymatch": "^3.1.2",
+    "braces": "^3.0.2",
+    "fill-range": "^7.0.1",
+    "glob-parent": "^5.1.2",
+    "fsevents": "^2.3.2",
+    "is-binary-path": "^2.1.0",
+    "immutable": "^4.1.0",
+    "is-number": "^7.0.0",
+    "normalize-path": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-extglob": "^2.1.1",
+    "readdirp": "^3.6.0",
+    "to-regex-range": "^5.0.1",
+    "picomatch": "^2.3.1",
+    "source-map-js": "^1.0.2"
   }
 }
