--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
   },
   "homepage": "https://github.com/Olivieroy/web-starter#readme",
   "devDependencies": {
-    "sass": "^1.55.0"
+    "sass": "^1.56.1"
   },
   "dependencies": {
-    "binary-extensions": "^2.2.0",
-    "chokidar": "^3.5.3",
     "anymatch": "^3.1.2",
+    "binary-extensions": "^2.2.0",
     "braces": "^3.0.2",
+    "chokidar": "^3.5.3",
     "fill-range": "^7.0.1",
-    "glob-parent": "^5.1.2",
     "fsevents": "^2.3.2",
-    "is-binary-path": "^2.1.0",
+    "glob-parent": "^5.1.2",
     "immutable": "^4.1.0",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
     "normalize-path": "^3.0.0",
-    "is-glob": "^4.0.3",
-    "is-extglob": "^2.1.1",
-    "readdirp": "^3.6.0",
-    "to-regex-range": "^5.0.1",
     "picomatch": "^2.3.1",
-    "source-map-js": "^1.0.2"
+    "readdirp": "^3.6.0",
+    "source-map-js": "^1.0.2",
+    "to-regex-range": "^5.0.1"
   }
 }
