update node_module et package_lock.json

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^10.0.1"
+    "imagemin-svgo": "^10.0.1",
+    "sass": "^1.62.0"
   },
   "dependencies": {
     "gulp-cli": "^2.3.0"
